# mcp_test_deploy

./: .env.emergency  .gitignore  ARCHITECTURE.md  CHART_GENERATION_ANALYSIS.md  CHART_POSITIONING_FIX_SUMMARY.md  CLAUDE.md  CONCURRENCY_OPTIMIZATION_PLAN.md  CONTRIBUTING.md  Dockerfile  MATPLOTLIB_ERROR_ANALYSIS.md  Makefile  README.md  README_ReAct_Agent.md  README_Streamlit_ReAct.md  complete_workflow_orchestration.py  example_react_client.py  example_simple_client.py  fix_mcp_warnings.py  mcp_server_clean.py  merchant_tokens.txt  pre_workflow_setup.py  pyproject.toml  react_slides_agent.py  requirements.txt  test_results_basic_20250904_142222.json  test_results_custom_20250904_142222.json  test_results_invalid_dates_20250904_142242.json  test_results_malformed_template_20250904_142242.json
.buildkite/: pipeline.yml
.buildkite/hooks/: pre-command
charts/: charts.py
main_functions_doc/: CREATE_SLIDES_ANALYSIS.md  CREATE_SLIDES_WRAPPER_ANALYSIS.md  EMERGENCY_FIXES_IMPLEMENTATION_SUMMARY.md  FILL_TEMPLATE_ANALYSIS.md  MCP_MATPLOT_RUN_ANALYSIS.md  MCP_TOOL_RUN_ANALYSIS.md
main_functions_doc/chart_docs/: CHART_FOLDER_MANAGEMENT_GUIDE.md  CHART_IMPORT_FIX_PLAN.md  CHART_STYLING_IMPLEMENTATION_SUMMARY.md  CHART_STYLING_USAGE_GUIDE.md
main_functions_doc/concurrency_docs/: BATCH_CONCURRENCY_ARCHITECTURE_FIX.md  BATCH_CONCURRENCY_PLAN.md  (+2 more)
planned_features/: LLM_PARAGRAPH_PROCESSING_PLAN.md
test_utils/: fix_mcp_warnings.py  mcp_server_clean.py  pre_workflow_setup.py  test_auth_fix.py  test_chart_folder_management.py  test_chart_positioning_fix.py  test_enhanced_function_only.py  test_enhanced_text_styling.py  test_paragraph_token_fix.py  test_slug_validation.py  test_slug_validation_fix.py  test_styling_simple.py  test_token_matching.py
tests/: test_chart_sizing_fixed.py
tmp/: alfred_result.txt  alfred_result__age-distribution-counts-users-with-age-bands-20-29-years-30-39-years-40-49-years-50-59-years-60-69-years-70-79-years-80-89-years-and-then-compute-in-percentages.txt  alfred_result__aov-by-product-type-i-e-pay-in-3-pay-in-4.txt  alfred_result__aov-over-the-last-3-months.txt  alfred_result__aov.txt  alfred_result__cart-type-distribution-counts-orders-by-cart-type-credit-prepaid-debit-and-then-compute-in-percentages.txt  alfred_result__distribution-of-orders-by-product-type-pay-in-3-pay-in-4-in-percentages.txt  alfred_result__gender-distribution-counts-users-by-gender-and-then-compute-in-percentages.txt  alfred_result__monthly-orders-by-product-type-pay-in-3-pay-in-4-over-the-last-two-years.txt  alfred_result__monthly-orders-by-user-type.txt  alfred_result__monthly-sales-by-product-type-over-time.txt  alfred_result__monthly-sales-over-time.txt  alfred_result__monthly-sales-year-over-year.txt  alfred_result__orders-and-aov-by-product-type-i-e-pay-in-3-pay-in-4.txt  alfred_result__orders-by-product-type-i-e-pay-in-3-pay-in-4.txt  alfred_result__orders-by-user-type-scalapay-network-returning-new.txt  alfred_result__orders-by-user-type-scalapay-network-returning-newmonthly-sales-by-product-type-over-time.txt  alfred_result__scalapay-users-demographic-in-percentages.txt  alfred_result__scalapay-users-demographic.txt  alfred_result__total-variations-in-percentages-of-sales-year-over-year.txt  zalando_result.txt
(+384 files in other folders)
